@@ -1,7 +1,7 @@
 // drumkv1_ui.h
 //
 /****************************************************************************
-   Copyright (C) 2012-2024, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2025, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -80,6 +80,8 @@ public:
 	void reset();
 
 	void updatePreset(bool bDirty);
+
+	void updateParam(drumkv1::ParamIndex index);
 
 	void midiInEnabled(bool bEnabled);
 	uint32_t midiInCount();
